--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -45,6 +45,10 @@
         </div>
     </div>
 
+    <div class="flex mt-4 bg-yellow-50 rounded-md p-2">
+        <shared-map></shared-map>
+    </div>
+
     <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3" *ngIf="form.get('deliveryType')?.value === 'recoger'">
         <h4 class="text-center font-semibold text-lg">Dirección del restaurante</h4>
 
