--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -6,3 +6,11 @@
 .btn-zoom { 
     @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300;
 }
+
+.mapboxgl-ctrl {
+    width: 100% !important;
+}
+
+.mapboxgl-canvas {
+    width: 100% !important;
+}
