Autofill with ubication selected

--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -127,7 +127,10 @@
 <div class="bg-yellow-50 rounded-md"
     *ngIf="showMap"
     [class]="form.get('deliveryType')?.value === 'recoger'? 'mt-4' : 'mt-0'">
-    <shared-map></shared-map>
+    
+    <shared-map
+        (onMapboxResponse)="getAddressByMap($event)">
+    </shared-map>
 </div>
 
 <div class="flex justify-between w-full mt-8"
