--- a/Frontend/src/app/modules/schedule/schedule.component.html
+++ b/Frontend/src/app/modules/schedule/schedule.component.html
@@ -1,6 +1,6 @@
 <div class="fixed z-20 inset-0 bg-gray-900 bg-opacity-60 h-full w-full flex items-center justify-center animate__animated"
     [class]="!isClosing ? 'animate__fadeIn' : 'animate__fadeOut'">
-    <div class="relative shadow-xl rounded-lg bg-white max-w-[550px] w-full text-gray-900 animate__animated my-6 max-h-[90vh] overflow-y-auto"
+    <div class="relative shadow-xl rounded-lg bg-light max-w-[550px] w-full text-gray-900 animate__animated my-6 max-h-[90vh] overflow-y-auto"
         [class]="!isClosing ? 'animate__fadeInDown' : 'animate__fadeOutUp'">
         <div class="flex justify-between p-6 items-center border-b border-gray-300">
             <h4 class="text-xl">Horarios de servicio</h4>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="flex justify-end p-6">
-            <button class="bg-gray-600 text-white py-2 px-4 rounded-lg"
+            <button class="bg-background-black-100 text-white py-2 px-4 rounded-lg"
             (click)="closeModal()">
                 Cerrar
             </button>
