--- a/Frontend/src/app/modules/cart/cart.component.html
+++ b/Frontend/src/app/modules/cart/cart.component.html
@@ -1,11 +1,11 @@
 <div class="fixed inset-0 z-10">
     <div class="absolute inset-0 bg-zinc-900 bg-opacity-75"></div>
-    <section class="absolute inset-y-0 right-0 w-full max-w-[450px] flex bg-zinc-900 animate__animated"
+    <section class="absolute inset-y-0 right-0 w-full max-w-[450px] flex bg-background-black animate__animated"
         [class]="isOpen ? 'animate__fadeInRightBig' : 'animate__fadeOutRight'">
         <div class="w-full relative">
             <div class="flex flex-col justify-between p-6 break-words h-full overflow-y-auto">
                 <div class="flex flex-col">
-                    <div class="flex justify-between items-center text-yellow-500"
+                    <div class="flex justify-between items-center text-background"
                         *ngIf="formPage != 4">
                         <h3 class="text-2xl font-semibold"><i class="fa-solid fa-cart-shopping"></i></h3>
 
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="flex w-full" *ngIf="(numberCartItems > 0 && formPage == 1) || formPage == 4">
-                    <button class="bg-yellow-500 rounded-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-yellow-400 w-full"
+                    <button class="bg-background rounded-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-background-100 w-full"
                         (click)="formPage != 4 ? changePage(true) : closeSidebar()">
                         <p class="mr-2">{{ formPage != 4 ? 'Continuar': 'Cerrar' }}</p>
                         <i class="fa-solid " [class]="formPage != 4? 'fa-chevron-right' : 'fa-xmark'"></i>
