--- a/Frontend/src/app/modules/cart/pages/items-page/items-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/items-page/items-page.component.html
@@ -1,4 +1,4 @@
-<div class="bg-yellow-50 rounded-md p-4 w-full">
+<div class="bg-light rounded-md p-4 w-full">
     <ul *ngIf="cartItems.length > 0" class="flex flex-col w-full">
         <cart-item-card *ngFor="let item of cartItems; let isLast = last;" [item]="item" [isLast]="isLast">
         </cart-item-card>
