--- a/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
+++ b/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
@@ -1,11 +1,11 @@
 <div class="fixed inset-0 z-10">
     <div class="absolute inset-0 bg-zinc-900 bg-opacity-75"></div>
-    <section class="absolute inset-y-0 right-0 w-full max-w-[450px] flex bg-zinc-900 animate__animated"
+    <section class="absolute inset-y-0 right-0 w-full max-w-[450px] flex bg-background-black animate__animated"
         [class]="isOpen ? 'animate__fadeInRightBig' : 'animate__fadeOutRight'">
         <div class="w-full relative">
             <div class="flex flex-col justify-between p-6 text-white break-words h-full">
                 <div class="flex flex-col">
-                    <div class="flex items-center justify-between text-yellow-500">
+                    <div class="flex items-center justify-between text-background">
                         <h3 class="text-2xl font-semibold">{{ product.name }}</h3>
 
                         <button class="text-3xl" (click)="closeSidebar()">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <button class="bg-yellow-500 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-yellow-400 btn-zoom"
+                <button class="bg-background-100 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-background btn-zoom"
                     (click)="addProduct()">
                     <i class="fa-solid fa-cart-plus text-xl"></i>
                     <p class="ml-3">Añadir {{ qtyProduct }} artículos por {{ (qtyProduct * product.price) | currency }}</p>
