--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -1,9 +1,9 @@
-<div class="min-h-screen bg-gray-50 p-6 shadow-lg h-full">
+<div class="min-h-screen bg-light p-6 shadow-lg h-full rounded-r-lg">
     <div class="flex w-52 flex-col justify-between h-full">
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
-            <button class="flex justify-center items-center py-1.5 rounded-lg border border-gray-500 bg-gray-100 text-gray-500 hover:text-white hover:bg-yellow-500"
+            <button class="flex justify-center items-center py-1.5 rounded-lg border border-blue-600 bg-blue-50 text-blue-600 hover:text-white hover:bg-blue-600"
             (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
@@ -15,7 +15,7 @@
                     <p class="ml-3">Menú</p>
                 </div>
                 <div class="flex flex-col justify-center text-lg font-medium">
-                    <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-yellow-500 hover:text-white"
+                    <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-background-100 hover:text-white"
                     *ngFor="let item of categories"
                     [href]="'#' + item.name">
                     <i [class]="'fa-solid ' + item.icon"></i>
@@ -25,10 +25,10 @@
             </div>
         </div>
 
-        <button class="flex justify-center items-center w-full py-2.5 rounded-full bg-yellow-500 text-white gap-x-1.5 font-semibold btn-zoom"
+        <button class="flex justify-center items-center w-full py-2.5 rounded-full bg-background-100 text-white gap-x-1.5 font-semibold btn-zoom"
         (click)="showCart()">
             <i class="fa-solid fa-cart-shopping text-xl"></i>
-            <p class="rounded-full bg-red-600 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
+            <p class="rounded-full bg-error-100 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
             <p>Artículos</p>
             <p>{{ cartSubtotal | currency }}</p>
         </button>
