--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -68,7 +68,7 @@
             <label>Colonia<span class="text-red-600 font-semibold">*</span>:</label>
 
             <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none"
-                formControlName="neighborhood" placeholder="colonia" maxlength="100" required />
+                formControlName="neighborhood" placeholder="Colonia" maxlength="100" required />
 
             <small *ngIf="form.controls['neighborhood'].dirty && form.controls['neighborhood'].errors?.['required']" 
                 class="text-sm text-error-100 italic">
