--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
-            <button class="flex justify-center items-center py-1.5 rounded-lg border border-blue-600 bg-blue-50 text-blue-600 hover:text-white hover:bg-blue-600"
+            <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-blue-50 text-primary-100 hover:text-white hover:bg-primary-100"
             (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
