MOD Whatsapp Service and Add Routing

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,25 +1,1 @@
-<div class="flex h-screen bg-background" *ngIf="isRestaurantOpen; else noService">
-  <shared-menu-sidebar 
-    (onShowCart)="openSidebar('Cart')"
-    (onShowSchedule)="openSchedule()"
-    [categories]="categories">
-  </shared-menu-sidebar>
-  
-  <div class="flex-1 overflow-y-auto p-6 scroll-smooth">
-    <app-cart *ngIf="sidebarType == 'Cart'"></app-cart>
-    
-     <app-products
-      [categories]="categories"
-     ></app-products>
-  </div>
-</div>
-
-<app-schedule *ngIf="isModalOpen"></app-schedule>
-
-<ng-template #noService>
-  <div class="flex-1">
-  <shared-no-service-page
-    (onShowSchedule)="openSchedule()">
-  </shared-no-service-page>
-</div>
-</ng-template>
+<router-outlet></router-outlet>
