--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
-            <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-blue-50 text-primary-100 hover:text-white hover:bg-primary-100"
+            <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-orange-50 text-primary-100 hover:text-white hover:bg-primary-100"
             (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <button class="flex justify-center items-center w-full py-2.5 rounded-full bg-background-100 text-white gap-x-1.5 font-semibold btn-zoom"
+        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-background-100 text-white gap-x-1.5 font-semibold btn-zoom"
         (click)="showCart()">
             <i class="fa-solid fa-cart-shopping text-xl"></i>
             <p class="rounded-full bg-error-100 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
