--- a/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
+++ b/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
@@ -6,7 +6,7 @@
         <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Favor de ver el horario de servicio e ingresar en el horario correspondiente</p>
       </div>
       <div class="mt-8 flex justify-center">
-        <button class="flex justify-center items-center py-1.5 px-5 rounded-lg border border-gray-500 bg-gray-100 text-gray-500 hover:text-white hover:bg-yellow-500"
+        <button class="flex justify-center items-center py-1.5 px-5 rounded-lg border border-primary-100 bg-orange-50 text-primary-100 hover:text-white hover:bg-primary-100"
             (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
