--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -7,7 +7,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Nombre completo<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none" 
+            <input type="text" class="input-ctrl" 
                 formControlName="clientName" maxlength="100" placeholder="Nombre completo" required />
 
             <small *ngIf="form.controls['clientName'].dirty && form.controls['clientName'].errors?.['required']" 
@@ -19,7 +19,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Celular<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none" 
+            <input type="text" class="input-ctrl" 
                 formControlName="clientTelephone" maxlength="10" placeholder="Celular de 10 dígitos" required/>
 
             <small *ngIf="form.controls['clientTelephone'].dirty && (form.controls['clientTelephone'].errors?.['required'] || form.controls['clientTelephone'].errors?.['pattern'])" 
@@ -67,7 +67,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Colonia<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none"
+            <input type="text" class="input-ctrl"
                 formControlName="neighborhood" placeholder="Colonia" maxlength="100" required />
 
             <small *ngIf="form.controls['neighborhood'].dirty && form.controls['neighborhood'].errors?.['required']" 
@@ -79,7 +79,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Calle<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none"
+            <input type="text" class="input-ctrl"
                 formControlName="street" placeholder="Nombre de la calle" maxlength="100" required />
 
             <small *ngIf="form.controls['street'].dirty && form.controls['street'].errors?.['required']" 
@@ -92,7 +92,7 @@
             <div class="flex flex-col gap-y-0.5">
                 <label>Número exterior<span class="text-red-600 font-semibold">*</span>:</label>
 
-                <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none" 
+                <input type="text" class="input-ctrl" 
                     formControlName="exteriorNumber" placeholder="000" maxlength="6" required />
 
                 <small *ngIf="form.controls['exteriorNumber'].dirty && form.controls['exteriorNumber'].errors?.['required']" 
@@ -104,7 +104,7 @@
             <div class="flex flex-col gap-y-0.5">
                 <label>Número interior:</label>
 
-                <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none" 
+                <input type="text" class="input-ctrl" 
                     formControlName="interiorNumber" placeholder="000" maxlength="6" />
             </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Referencias:</label>
 
-            <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none"
+            <textarea type="text" class="textarea-ctrl"
                 formControlName="references" maxlength="250">
             </textarea>
 
