--- a/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
@@ -19,7 +19,7 @@
         <h4 class="text-center font-semibold text-lg">Cupón de descuento</h4>
 
         <div class="flex justify-between items-center">
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none" />
+            <input type="text" class="input-ctrl" />
             
             <button class="bg-yellow-200 text-white w-auto rounded-md py-1.5 px-4">Validar</button>
         </div>
@@ -93,7 +93,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Comentarios:</label>
 
-            <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-background-100 focus:ring-0 focus:outline-none"
+            <textarea type="text" class="textarea-ctrl"
                 formControlName="comentaries" maxlength="250" placeholder="Ejemplo: No agregar servilletas, no agregar cubiertos"></textarea>
         </div>
     </div>
