--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -17,7 +17,7 @@
             </div>            
         </div>
 
-        <div class="flex flex-wrap mt-2 justify-center items-center md:flex-auto md:justify-between">
+        <div class="flex flex-wrap mt-2 justify-between items-center sm:flex-auto">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
             
             <button class="flex items-center py-1.5 px-2 rounded-lg bg-secondary-100 text-white hover:bg-secondary btn-zoom"
