--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -1,10 +1,51 @@
-<div class="min-h-screen bg-light p-6 shadow-lg h-full rounded-r-lg">
-    <div class="flex w-52 flex-col justify-between h-full">
+<div class="p-4 rounded-b-lg md:min-h-screen md:p-6 md:h-full md:rounded-r-lg bg-light shadow-lg">
+    <div class="flex md:hidden justify-between items-center">
+        <h3 class="font-medium text-2xl">Negocio</h3>
+        <button (click)="toggleMenu()" class="text-xl text-background-100">
+            <i class="fa-solid fa-bars"></i> 
+        </button>
+    </div>
+
+    <!-- Menú Toggle -->
+    <div *ngIf="isMenuOpen" class="md:hidden flex flex-col gap-y-8 mt-4">
+        <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-orange-50 text-primary-100 hover:text-white hover:bg-primary-100"
+        (click)="showSchedule()">
+            <i class="fa-solid fa-clock"></i>
+            <p class="ml-2">Horarios de servicio</p>
+        </button>
+
+        <div class="flex flex-col justify-center text-lg font-medium">
+            <div class="flex justify-center items-center text-3xl font-semibold">
+                <i class="fa-solid fa-utensils"></i>
+                <p class="ml-3">Menú</p>
+            </div>
+
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-background-100 hover:text-white"
+                *ngFor="let item of categories"
+                [href]="'#' + item.name"
+                (click)="toggleMenu()">
+                <i [class]="'fa-solid ' + item.icon"></i>
+
+                <p class="ml-3">{{item.name}}</p>
+            </a>
+        </div>
+
+        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-background-100 text-white gap-x-2 font-semibold btn-zoom"
+            (click)="showCart()">
+            <i class="fa-solid fa-cart-shopping text-xl"></i>
+            <p class="rounded-full bg-error-100 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
+            <p>Artículos</p>
+            <p>{{ cartSubtotal | currency }}</p>
+        </button>
+    </div>
+
+    <!-- Sidebar -->
+    <div class="hidden md:flex w-52 flex-col justify-between h-full">
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
             <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-orange-50 text-primary-100 hover:text-white hover:bg-primary-100"
-            (click)="showSchedule()">
+                (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
             </button>
