--- a/Frontend/src/app/modules/products/components/layout/layout.component.html
+++ b/Frontend/src/app/modules/products/components/layout/layout.component.html
@@ -3,7 +3,7 @@
     <h2 class="ml-3" [id]="category.name">{{ category.name }}</h2>
 </div>
 
-<hr class="border border-secondary my-8" />
+<hr class="border border-secondary-100 my-8" />
 
 <div class="grid grid-cols-1 w-full sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-2.5 h-auto">
     <product-card *ngFor="let item of products" [product]="item" (onSelectedProduct)="openSidebar($event)">
