--- a/Frontend/src/app/modules/cart/components/item-card/item-card.component.html
+++ b/Frontend/src/app/modules/cart/components/item-card/item-card.component.html
@@ -28,7 +28,7 @@
             [smallSize]="true"
             (onQtyChange)="newNumber = $event">
         </shared-quantity-buttons>
-        <button class="py-2 border border-background-100 text-background-100 hover:text-white hover:bg-background-100 rounded-md"
+        <button class="py-2 border border-primary-100 text-primary-100 hover:text-white hover:bg-primary-100 rounded-md"
             (click)="editQuantity()">
             Aceptar
         </button>
