--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -20,7 +20,7 @@
         <div class="flex flex-wrap mt-2 justify-between items-center sm:flex-auto">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
             
-            <button class="flex items-center py-1.5 px-2 rounded-lg bg-secondary-100 text-white hover:bg-secondary btn-zoom"
+            <button class="flex items-center py-1.5 px-2 rounded-lg bg-primary-100 text-white hover:bg-primary hover:text-black btn-zoom"
                 (click)="selectedProduct()">
                 <i class="fa-solid fa-cart-plus"></i>
                 <p class="ml-3">Comprar</p>
