--- a/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
+++ b/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
@@ -5,7 +5,7 @@
         <div class="w-full relative">
             <div class="flex flex-col justify-between p-6 text-white break-words h-full">
                 <div class="flex flex-col">
-                    <div class="flex items-center justify-between text-background">
+                    <div class="flex items-center justify-between text-primary-100">
                         <h3 class="text-2xl font-semibold">{{ product.name }}</h3>
 
                         <button class="text-3xl" (click)="closeSidebar()">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <button class="bg-background-100 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-background btn-zoom"
+                <button class="bg-primary-100 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-primary btn-zoom"
                     (click)="addProduct()">
                     <i class="fa-solid fa-cart-plus text-xl"></i>
                     <p class="ml-3">Añadir {{ qtyProduct }} artículos por {{ (qtyProduct * product.price) | currency }}</p>
