--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="p-4 rounded-b-lg md:min-h-screen md:p-6 md:h-full md:rounded-r-lg bg-light shadow-lg">
     <div class="flex md:hidden justify-between items-center">
         <h3 class="font-medium text-2xl">Negocio</h3>
-        <button (click)="toggleMenu()" class="text-xl text-background-100">
+        <button (click)="toggleMenu()" class="text-xl text-primary-100">
             <i class="fa-solid fa-bars"></i> 
         </button>
     </div>
@@ -20,7 +20,7 @@
                 <p class="ml-3">Menú</p>
             </div>
 
-            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-background-100 hover:text-white"
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-primary hover:text-white"
                 *ngFor="let item of categories"
                 [href]="'#' + item.name"
                 (click)="toggleMenu()">
@@ -30,10 +30,10 @@
             </a>
         </div>
 
-        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-background-100 text-white gap-x-2 font-semibold btn-zoom"
+        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-secondary-100 text-black gap-x-1.5 font-semibold btn-zoom"
             (click)="showCart()">
             <i class="fa-solid fa-cart-shopping text-xl"></i>
-            <p class="rounded-full bg-error-100 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
+            <p class="rounded-full bg-error h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
             <p>Artículos</p>
             <p>{{ cartSubtotal | currency }}</p>
         </button>
@@ -56,7 +56,7 @@
                     <p class="ml-3">Menú</p>
                 </div>
                 <div class="flex flex-col justify-center text-lg font-medium">
-                    <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-background-100 hover:text-white"
+                    <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-primary hover:text-white"
                     *ngFor="let item of categories"
                     [href]="'#' + item.name">
                     <i [class]="'fa-solid ' + item.icon"></i>
@@ -66,10 +66,10 @@
             </div>
         </div>
 
-        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-background-100 text-white gap-x-1.5 font-semibold btn-zoom"
+        <button class="flex justify-center items-center w-full px-1.5 py-2.5 rounded-full bg-secondary-100 text-black gap-x-1.5 font-semibold btn-zoom"
         (click)="showCart()">
             <i class="fa-solid fa-cart-shopping text-xl"></i>
-            <p class="rounded-full bg-error-100 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
+            <p class="rounded-full bg-error h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">{{ numberCartItems }}</span></p>
             <p>Artículos</p>
             <p>{{ cartSubtotal | currency }}</p>
         </button>
