--- a/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
+++ b/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
@@ -1,7 +1,10 @@
 <div class="min-h-screen bg-gray-100 dark:bg-gray-900 flex flex-col justify-center items-center px-4 sm:px-6 lg:px-8">
     <div class="max-w-md w-full space-y-8 text-center">
+      <div class="flex justify-center">
+        <img class="w-52" src="/assets/logo.png" />
+      </div>
       <div class="mb-8">
-        <h2 class="mt-6 text-6xl font-extrabold text-gray-900 dark:text-gray-100">Sin servicio</h2>
+        <h2 class="mt-2 text-6xl font-extrabold text-gray-900 dark:text-gray-100">Sin servicio</h2>
         <p class="mt-2 text-3xl font-bold text-gray-900 dark:text-gray-100">El restaurante se encuentra fuera de servicio</p>
         <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Favor de ver el horario de servicio e ingresar en el horario correspondiente</p>
       </div>
