--- a/Frontend/src/app/modules/administration/administration.component.html
+++ b/Frontend/src/app/modules/administration/administration.component.html
@@ -1,1 +1,18 @@
-<p>administration works!</p>
+<div class="flex flex-col md:h-screen md:flex-row bg-admin-background">
+    <shared-admin-sidebar></shared-admin-sidebar>
+
+    <div class="md:flex-1 md:overflow-y-auto p-6 scroll-smooth">
+        <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase">
+            <i class="fa-solid fa-drumstick-bite"></i>
+            <h2 class="ml-3" id="productos">Productos</h2>
+        </div>
+        
+        <hr class="border border-warning-100 my-8" />
+        
+        <div class="grid grid-cols-1 w-full sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-2.5 h-auto">
+            
+            
+        </div>
+    </div>
+</div>
+
