--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -64,7 +64,7 @@
                 <div class="flex flex-col justify-center text-lg font-medium">
                     <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-primary hover:text-white"
                     *ngFor="let item of categories"
-                    [href]="'#' + item.name">
+                    [href]="'clients#' + item.name">
                     <i [class]="'fa-solid ' + item.icon"></i>
                     <p class="ml-3">{{item.name}}</p>
                 </a>
