Add Google Maps

--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -128,8 +128,7 @@
     *ngIf="showCompleteMap"
     [class]="form.get('deliveryType')?.value === 'recoger'? 'mt-4' : 'mt-0'">
     
-    <shared-map
-        (onMapboxResponse)="getAddressByMap($event)">
+    <shared-map (onConfirmAddress)="getAddressByMap($event)">
     </shared-map>
 </div>
 
