--- a/Frontend/src/app/shared/components/map/map.component.html
+++ b/Frontend/src/app/shared/components/map/map.component.html
@@ -1,6 +1,12 @@
-<div id="geocoder-container" style="position: relative; z-index: 10;"></div>
-<div id="map" style="height: 500px; overflow: visible; position: relative; z-index: 1;"></div>
-<button class="bg-primary-100 w-full rounded-b-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-primary"
+<div id="place-autocomplete-card" class="z-30 w-full">
+    <input id="place-autocomplete-input" type="text" placeholder="Buscar dirección" class="input-ctrl w-full" />
+</div>
+
+<google-map id="map" height="500px" width="100%" [options]="mapOptions">
+</google-map>
+
+<button
+    class="bg-primary-100 w-full rounded-b-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-primary"
     (click)="confirmAddress()">
     <p class="mr-3">Aceptar</p>
     <i class="fa-solid fa-check"></i>
