Fix order and whatsapp service

--- a/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
@@ -56,7 +56,7 @@
         </div>
 
         <div *ngIf="form.get('paymentMethod')?.value === 'efectivo'" >
-            <input type="number" class="input-ctrl" 
+            <input type="number" class="input-ctrl w-full" 
             placeholder="¿Con cuánto pagas?"
             formControlName="paidWith"/>
 
