Mod google maps and add cart button

--- a/Frontend/src/app/modules/administration/administration.component.html
+++ b/Frontend/src/app/modules/administration/administration.component.html
@@ -9,10 +9,7 @@
         
         <hr class="border border-warning-100 my-8" />
         
-        <div class="grid grid-cols-1 w-full sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-2.5 h-auto">
-            
-            
-        </div>
+        <product-table></product-table>
     </div>
 </div>
 
