--- a/Frontend/src/app/modules/products/components/product-table/product-table.component.html
+++ b/Frontend/src/app/modules/products/components/product-table/product-table.component.html
@@ -1,5 +1,6 @@
-<div class="overflow-x-auto">
-    <div class="align-middle">
+<div class="flex flex-col">
+    <div class="overflow-x-auto">
+        <div class="align-middle">
             <table class="w-full rounded-xl">
                 <thead>
                     <tr class="bg-yellow-100">
@@ -11,13 +12,14 @@
                     </tr>
                 </thead>
                 <tbody class="bg-light">
-                    <tr>
+                    <tr *ngFor="let item of products; let isLast = last"
+                        [class]="isLast ? '' : 'border-b border-gray-300'">
                         <td>
-                            <img class="h-24 rounded-lg" src="/assets/img/frijol.png" />
+                            <img class="h-24 w-24 rounded-lg" [src]="item.image | imagePipe" />
                         </td>
-                        <td>Yo que se paste con mierda</td>
-                        <td>Un delicioso paste no tan delicioso porque tiene mierda includia como el pastel de mierda en historias cruzadas:D</td>
-                        <td>$99.99</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.description }}</td>
+                        <td>{{ item.price | currency }}</td>
                         <td>
                             <div class="flex flex-col items-center gap-2">
                                 <button class="p-2 rounded-full text-base text-secondary-100">
@@ -32,4 +34,20 @@
                 </tbody>
             </table>
         </div>
+    </div>
+
+    <div class="mt-2 flex justify-between">
+        <span></span>
+        <div class="flex gap-x-4 items-center">
+            <button *ngIf="canPrev" (click)="changePage(currentPage - 1)"><i class="fa-solid fa-angle-left"></i></button>
+
+            <div class="flex items-center">
+                <p class="mr-2">Página {{ currentPage }}</p> 
+                <!-- <input class="mx-2 p-2 w-14 rounded-md" type="number" [value]="currentPage" min="1" [max]="pages" /> -->
+                <p>de {{ pages }}</p>
+            </div>
+
+            <button *ngIf="canNext" (click)="changePage(currentPage + 1)"><i class="fa-solid fa-angle-right"></i></button>
+        </div>
+    </div>
 </div>
