--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -4,11 +4,11 @@
 @tailwind utilities;
 
 th {
-    @apply p-3 text-left leading-3 font-semibold capitalize rounded-t-xl;
+    @apply p-3 text-left leading-6 font-semibold capitalize rounded-t-xl;
 }
 
 td {
-    @apply p-3 text-sm leading-3;
+    @apply p-2 leading-6;
 }
 
 .btn-zoom { 
