Add Category read

--- a/Frontend/src/app/modules/administration/administration.component.html
+++ b/Frontend/src/app/modules/administration/administration.component.html
@@ -2,14 +2,7 @@
     <shared-admin-sidebar></shared-admin-sidebar>
 
     <div class="md:flex-1 md:overflow-y-auto p-6 scroll-smooth">
-        <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase">
-            <i class="fa-solid fa-drumstick-bite"></i>
-            <h2 class="ml-3" id="productos">Productos</h2>
-        </div>
-        
-        <hr class="border border-warning-100 my-8" />
-        
-        <product-table></product-table>
+        <router-outlet></router-outlet>
     </div>
-</div>
 
+</div>
