--- a/Frontend/src/app/shared/components/admin-sidebar/admin-sidebar.component.html
+++ b/Frontend/src/app/shared/components/admin-sidebar/admin-sidebar.component.html
@@ -20,20 +20,25 @@
                 <p class="ml-3">Opciones</p>
             </div>
 
-            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent hover:text-white">
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent">
                 <i class="fa-solid fa-drumstick-bite"></i>
 
                 <p class="ml-3">Productos</p>
             </a>
-            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent hover:text-white">
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent">
                 <i class="fa-solid fa-list"></i>
 
                 <p class="ml-3">Categorías</p>
             </a>
-            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent hover:text-white">
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent">
                 <i class="fa-solid fa-clock"></i>
 
                 <p class="ml-3">Horarios</p>
+            </a>
+            <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent">
+                <i class="fa-solid fa-circle-info"></i>
+
+                <p class="ml-3">Información</p>
             </a>
         </div>
 
@@ -67,6 +72,11 @@
                         <i class="fa-solid fa-clock"></i>
 
                         <p class="ml-3">Horarios</p>
+                    </a>
+                    <a class="flex justify-center items-center py-1.5 rounded-lg hover:bg-accent">
+                        <i class="fa-solid fa-circle-info"></i>
+        
+                        <p class="ml-3">Información</p>
                     </a>
                 </div>
             </div>
