--- a/Frontend/src/app/modules/administration/pages/schedules-admin/schedules-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/schedules-admin/schedules-admin.component.html
@@ -1,1 +1,10 @@
-<p>schedules-admin works!</p>
+<div class="flex justify-between items-center">
+    <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
+        <i class="fa-solid fa-clock"></i>
+        <h2 class="ml-3" id="horarios">Horarios</h2>
+    </div>
+</div>
+
+<hr class="border border-warning-100 my-8" />
+
+<schedule-table></schedule-table>
