--- a/Frontend/src/app/modules/administration/pages/product-admin/product-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/product-admin/product-admin.component.html
@@ -1,13 +1,16 @@
+<product-form *ngIf="sidebarType == 'Create'"></product-form>
+
 <div class="flex justify-between items-center">
     <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
         <i class="fa-solid fa-drumstick-bite"></i>
         <h2 class="ml-3" id="productos">Productos</h2>
     </div>
 
-    <div class="flex justify-end items-center text-admin-primary-100 font-semibold w-auto">
+    <button class="flex justify-end items-center text-admin-primary-100 font-semibold w-auto"
+        (click)="openSidebar('Create')">
         <i class="fa-regular fa-square-plus text-2xl"></i>
         <p class="ml-2 text-xl hidden underline sm:block">Agregar</p>
-    </div>
+</button>
 </div>
 
 <hr class="border border-warning-100 my-8" />
