Change Assets ubication

--- a/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
+++ b/Frontend/src/app/shared/pages/no-service-page/no-service-page.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen bg-gray-100 dark:bg-gray-900 flex flex-col justify-center items-center px-4 sm:px-6 lg:px-8">
     <div class="max-w-md w-full space-y-8 text-center">
       <div class="flex justify-center">
-        <img class="w-52" src="/assets/logo.png" />
+        <img class="w-52" src="/img/logo.png" />
       </div>
       <div class="mb-8">
         <h2 class="mt-2 text-6xl font-extrabold text-gray-900 dark:text-gray-100">Sin servicio</h2>
