--- a/Frontend/src/app/modules/products/components/product-form/product-form.component.html
+++ b/Frontend/src/app/modules/products/components/product-form/product-form.component.html
@@ -13,20 +13,68 @@
                     </div>
 
                     <form class="mt-10 flex flex-col items-center justify-items-center w-full gap-y-8">
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Nombre<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <input type="text" class="input-ctrl admin w-full" placeholder="Nombre del producto" required/>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Descripción<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <textarea class="textarea-ctrl admin w-full" placeholder="Descripción del producto" required></textarea>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+                        
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Precio<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <input type="number" class="input-ctrl admin w-full" min="1" placeholder="Precio del producto" required/>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+
+
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Stock<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <input type="number" class="input-ctrl admin w-full" min="1" placeholder="Stock del producto" required/>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Sku:</label>
+                
+                            <input type="text" class="input-ctrl admin w-full" placeholder="Sku del producto" />
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Disponible<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <input type="text" class="input-ctrl admin w-full" placeholder="Nombre del producto" required/>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+                        
                         <img class="w-36 h-36 rounded-md"  />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
-                        <input type="text" class="input-ctrl admin w-full" />
-
                     </form>
                 </div>
 
